blue-green-deployment/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-node-app-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
  - host: app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-node-app-active-service
            port:
              number: 80

  - host: preview.app.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-node-app-preview-service
            port:
              number: 80

  - http:
      paths:
      - path: /preview
        pathType: Prefix
        backend:
          service:
            name: my-node-app-preview-service
            port:
              number: 80

      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-node-app-active-service
            port:
              number: 80
